--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,11 @@ body {
         background: #6b6c6d;
 }
 
-.column1 {
+.column {
         display: block;
-        width: 200px;
         border: 2px solid black;
-        margin: 0px 0px 0px 0px;
-}
 
-.column2 {
-        display: block;
-        width: 75%;
-        margin: 0px 10px 20px 0px;
-        padding-right: 0px;
-        border: 2px solid black;
+        padding: 20px 0px 20px 0px;
 }
 
 ul {
@@ -34,7 +26,7 @@ li a:hover {
 
 .sidebar {
         display: block;
-        width 200px;
+        width 50px;
 }
 
 .header {
@@ -53,7 +45,7 @@ li a:hover {
 }
 
 .quote {
-        display: inline;
+        display: block;
         width: 100%
         background: linear-gradient(red, yellow);
 }
@@ -82,4 +74,10 @@ h1 {
 
 .container {
             display: block;
+}
+
+.empty div {
+            display: block;
+            width: 100%;
+            height: 300px;
 }
